cleanup template code
