# src/main/java/dk/kb/spilsamlingen/api/v1/impl/KbSpilsamlingenApiServiceImpl.java
@@ -1,10 +1,11 @@
 package dk.kb.spilsamlingen.api.v1.impl;
 
 import dk.kb.spilsamlingen.api.v1.*;
-import dk.kb.spilsamlingen.model.v1.BookDto;
+
 import dk.kb.spilsamlingen.model.v1.ErrorDto;
+import dk.kb.spilsamlingen.solr.SolrServerClient;
+
 import java.io.File;
-import dk.kb.spilsamlingen.model.v1.HelloReplyDto;
 import java.util.List;
 import java.util.Map;
 
@@ -55,211 +56,20 @@ import io.swagger.annotations.Api;
 public class KbSpilsamlingenApiServiceImpl extends ImplBase implements KbSpilsamlingenApi {
     private Logger log = LoggerFactory.getLogger(this.toString());
 
-
-
-    /**
-     * Add or update a single book
-     * 
-     * @param BookDto: Add or update a single book
-     * 
-     * @return <ul>
-      *   <li>code = 200, message = "If the book was added successfully", response = BookDto.class</li>
-      *   </ul>
-      * @throws ServiceException when other http codes should be returned
-      *
-      * @implNote return will always produce a HTTP 200 code. Throw ServiceException if you need to return other codes
-     */
     @Override
-    public BookDto addBook(BookDto bookDto) throws ServiceException {
-        // TODO: Implement...
-    
-        
-        try { 
-            BookDto response = new BookDto();
-        response.setId("GvagAgeE");
-        response.setTitle("P0Tqb5Ocy");
-        response.setPages(1107830956);
-        return response;
-        } catch (Exception e){
-            throw handleException(e);
+    public String search(String q) throws ServiceException {
+
+        try {
+          //  String solrUrl= ServiceConfig.getSolrUrl();
+            String solrUrl="http://localhost:8983/solr/transcriptions/";
+            SolrServerClient client = new SolrServerClient(solrUrl); 
+            return client.searchJsonResponse(q);
+        } catch (Exception e) {
+            e.printStackTrace();
+            throw new InternalServiceException(e.getMessage());
         }
-    
     }
 
-    /**
-     * Perform some image processing and return the result as an image
-     * 
-     * @param image: The image to use as source for the colorization
-     * 
-     * @param method: The algorithm used to colorize the image
-     * 
-     * @param intensity: The intensity of the colorization
-     * 
-     * @return <ul>
-      *   <li>code = 200, message = "The colorized image", response = String.class</li>
-      *   </ul>
-      * @throws ServiceException when other http codes should be returned
-      *
-      * @implNote return will always produce a HTTP 200 code. Throw ServiceException if you need to return other codes
-     */
-    @Override
-    public javax.ws.rs.core.StreamingOutput colorize( Attachment imageDetail, String method, Double intensity) throws ServiceException {
-        // TODO: Implement...
     
-        
-        try { 
-            // Show download link in Swagger UI, inline when opened directly in browser
-            setFilename("somefile", true, false);
-            return output -> output.write("Magic".getBytes(java.nio.charset.StandardCharsets.UTF_8));
-        } catch (Exception e){
-            throw handleException(e);
-        }
-    
-    }
-
-    /**
-     * Deletes metadata for a single book
-     * 
-     * @param id: The ID for the book to delete
-     * 
-     * @return <ul>
-      *   <li>code = 200, message = "OK", response = String.class</li>
-      *   <li>code = 404, message = "Not found", response = String.class</li>
-      *   </ul>
-      * @throws ServiceException when other http codes should be returned
-      *
-      * @implNote return will always produce a HTTP 200 code. Throw ServiceException if you need to return other codes
-     */
-    @Override
-    public String deleteBook(String id) throws ServiceException {
-        // TODO: Implement...
-    
-        
-        try { 
-            String response = "vUk03";
-        return response;
-        } catch (Exception e){
-            throw handleException(e);
-        }
-    
-    }
-
-    /**
-     * Sample OpenAPI definition for a service that constructs a PDF and delivers it
-     * 
-     * @param id: The ID of the article to process
-     * 
-     * @return <ul>
-      *   <li>code = 200, message = "OK", response = String.class</li>
-      *   <li>code = 404, message = "Article ID is unknown", response = ErrorDto.class</li>
-      *   </ul>
-      * @throws ServiceException when other http codes should be returned
-      *
-      * @implNote return will always produce a HTTP 200 code. Throw ServiceException if you need to return other codes
-     */
-    @Override
-    public javax.ws.rs.core.StreamingOutput getArticle(String id) throws ServiceException {
-        // TODO: Implement...
-    
-        
-        try { 
-            // Show download link in Swagger UI, inline when opened directly in browser
-            setFilename("somefile", true, false);
-            return output -> output.write("Magic".getBytes(java.nio.charset.StandardCharsets.UTF_8));
-        } catch (Exception e){
-            throw handleException(e);
-        }
-    
-    }
-
-    /**
-     * Retrieves metadata for a single book
-     * 
-     * @param id: The ID for the book to retrieve
-     * 
-     * @return <ul>
-      *   <li>code = 200, message = "Structured representation of the Book.", response = BookDto.class</li>
-      *   <li>code = 404, message = "Not found", response = String.class</li>
-      *   </ul>
-      * @throws ServiceException when other http codes should be returned
-      *
-      * @implNote return will always produce a HTTP 200 code. Throw ServiceException if you need to return other codes
-     */
-    @Override
-    public BookDto getBook(String id) throws ServiceException {
-        // TODO: Implement...
-    
-        
-        try { 
-            BookDto response = new BookDto();
-        response.setId("Kvg2Go6");
-        response.setTitle("Za656");
-        response.setPages(-806532966);
-        return response;
-        } catch (Exception e){
-            throw handleException(e);
-        }
-    
-    }
-
-    /**
-     * Delivers metadata on books
-     * 
-     * @param query: Search query for the books
-     * 
-     * @param max: The maximum number of books to return
-     * 
-     * @param format: The delivery format. This can also be specified using headers, as seen in the Responses section. If both headers and format are specified, format takes precedence.  * JSONL: Newline separated single-line JSON representations of Books * JSON: Valid JSON in the form of a single array of Books * XML: Valid XML in the form of a single container with Books * CSV: Comma separated, missing values represented with nothing, strings encapsulated in quotes 
-     * 
-     * @return <ul>
-      *   <li>code = 200, message = "OK", response = String.class</li>
-      *   <li>code = 400, message = "HTTP 400: Bad request", response = String.class</li>
-      *   </ul>
-      * @throws ServiceException when other http codes should be returned
-      *
-      * @implNote return will always produce a HTTP 200 code. Throw ServiceException if you need to return other codes
-     */
-    @Override
-    public javax.ws.rs.core.StreamingOutput getBooks(String query, Long max, String format) throws ServiceException {
-        // TODO: Implement...
-    
-        
-        try { 
-            // Show download link in Swagger UI, inline when opened directly in browser
-            setFilename("somefile", true, false);
-            return output -> output.write("Magic".getBytes(java.nio.charset.StandardCharsets.UTF_8));
-        } catch (Exception e){
-            throw handleException(e);
-        }
-    
-    }
-
-    /**
-     * Request a Hello World message, for testing purposes
-     * 
-     * @param alternateHello: Optional alternative to using the word &#39;Hello&#39; in the reply
-     * 
-     * @return <ul>
-      *   <li>code = 200, message = "A JSON structure containing a Hello World message", response = HelloReplyDto.class</li>
-      *   </ul>
-      * @throws ServiceException when other http codes should be returned
-      *
-      * @implNote return will always produce a HTTP 200 code. Throw ServiceException if you need to return other codes
-     */
-    @Override
-    public HelloReplyDto getGreeting(String alternateHello) throws ServiceException {
-        // TODO: Implement...
-    
-        
-        try { 
-            HelloReplyDto response = new HelloReplyDto();
-        response.setMessage("cDlaB1");
-        return response;
-        } catch (Exception e){
-            throw handleException(e);
-        }
-    
-    }
-
 
 }
